[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/SoundPlayer.gd" type="Script" id=1]

[node name="SoundPlayer" type="Node2D"]
script = ExtResource( 1 )

[node name="ThaiAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundEffectAudioStreamPlayer1" type="AudioStreamPlayer" parent="."]

[node name="SoundEffectAudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="Music_A" type="AudioStreamPlayer" parent="."]

[node name="Music_B" type="AudioStreamPlayer" parent="."]
